Fix image spacing in About section

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -62,10 +62,10 @@
 .about {
   padding: 30px 0 30px;
   .about-image {
-    margin: 20px auto 0;
+    margin: 30px auto 0;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .about {
     .about-image {
       margin: 0 auto;
